# ldoge

./: Makefile.am
doc/man/: Makefile.am  peercoin-util.1
scripts/: litedogeconf.sh
src/: bitcoind-res.rc  clientversion.cpp  clientversion.h  init.cpp
src/consensus/: amount.h
src/qt/: Makefile  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoinunits.cpp  mintingtablemodel.cpp
