dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=litedoged.1
endif

if ENABLE_QT
  dist_man1_MANS+=litedogen-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=litedoge-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=litedoge-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=litedoge-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=litedoge-wallet.1
endif
endif
